display each category adding checkbox for each category fixing some layout problem adding all product checkbox with pagination to 6 item per page enable token check to access /Home storing the cart item + name product to local array and adding modal to displayit enable the search bar
problem not solved yet:
displaying more then one category at the same time
cant find way to join or conect  multiple array at the same time

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,25 +1,40 @@
-* {
-    box-sizing: border-box;
+
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: column
 }
 
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
-    
-}
 .gray{
     color: gray;
 }
 .header {
+    position: fixed;
+    width: 99%;
+    z-index: 100;
+    border-bottom: 1px solid black;
     overflow: hidden;
     background-color: white;
     margin: -10px -10px -10px -10px;
     padding: 20px 10px 10px;
-}
 
-.header a {
-    
+}
+.headeritem{
+    float: left;
+    color: gray;
+    text-align: center;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+     padding: 10px;
+
+    cursor: pointer;
+}
+.header a  {
     float: left;
     color: gray;
     text-align: center;
@@ -40,11 +55,7 @@ body {
 
 }
 
-.header a:hover {
-    background-color: lightgray;
-    color: black;
- 
-}
+
 
 .header a.active {
     background-color: lightgray;
@@ -55,17 +66,8 @@ body {
     float: right;
 }
 
-@media screen and (max-width: 500px) {
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
 
-    .header-right {
-        float: none;
-    }
-}
+
 
 hr {
     margin-left: -20px;
@@ -77,12 +79,119 @@ hr {
 
 footer {
     position:absolute;
-    bottom:0;
-    width:100%;
-    height:80px;  
-    margin-left:-10px ;
+    margin: auto 0;    width:100%;
+    margin-left:-8px ;
+    
     background-color: #1D2939;
     color: white;
   }
 
 
+
+ 
+
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: 1px solid gray;
+    border-radius: 15px;
+    width: 70%;
+    
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+  }
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    zoom: 80%;
+padding-left: 100px;
+  }
+
+
+  .button1{
+    width: 100%; justify-content: center; text-align: center; background-color: #56D9D9; border: 0px; border-radius: 5px;padding-top: 10px;padding-bottom: 10px;
+     font-size: larger; margin-top: 10; font-weight: bold;
+}
+
+
+.pagination {
+    display: inline-block;
+    padding-left: 40%;
+
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+  }
+
+  .modalDialog {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    opacity:0;
+
+    pointer-events: none;
+}
+.modalDialog:target {
+    opacity:0;
+    pointer-events: auto;
+}
+.modalDialog > div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    border-radius: 10px;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+}
+.close {
+    background: #606061;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+}
+.close:hover {
+    background: #00d9ff;
+}
